[gd_scene load_steps=2 format=3 uid="uid://cftvjtevt7l2k"]

[ext_resource type="Script" uid="uid://bm3aoygxiityl" path="res://Scenes/chat_room.gd" id="1_jqiim"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_jqiim")

[node name="Host" type="Button" parent="."]
offset_left = 41.0
offset_top = 6.0
offset_right = 85.0
offset_bottom = 37.0
text = "Host"

[node name="Join" type="Button" parent="."]
offset_left = 2.0
offset_top = 6.0
offset_right = 40.0
offset_bottom = 37.0
text = "Join"

[node name="Username" type="LineEdit" parent="."]
offset_left = 86.0
offset_top = 6.0
offset_right = 196.0
offset_bottom = 37.0
text = "Username"

[node name="Send" type="Button" parent="."]
offset_left = 1.0
offset_top = -42.0
offset_right = 48.0
offset_bottom = -11.0
text = "Send"

[node name="Message" type="LineEdit" parent="."]
offset_top = -74.0
offset_right = 350.0
offset_bottom = -43.0
text = "Message"

[node name="Messages" type="TextEdit" parent="."]
offset_left = 351.0
offset_top = -304.0
offset_right = 701.0
offset_bottom = -54.0
editable = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(167, -137)
zoom = Vector2(0.4, 0.4)

[node name="ChatDisplay" type="TextEdit" parent="."]
offset_left = 5.0
offset_top = -322.0
offset_right = 352.0
offset_bottom = -75.0
editable = false

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Send" to="." method="_on_send_pressed"]
